docker-compose/k8s/escluster/kibana/kibana-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: elastic
  name: kibana
spec:
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: kibana:7.8.0
        resources:
          limits:
            memory: "2048Mi"
            cpu: "500m"
        ports:
        - containerPort: 5601
          name: kibanaweb
        volumeMounts:
          - name: config
            mountPath: /usr/share/kibana/config/kibana.yml
            readOnly: true
            subPath: kibana.yml
      volumes:
        - name: config
          configMap:
            name: kibana-config
