docker-compose/k8s/escluster/kibana/kibana-service.yml
---
kind: Service
apiVersion: v1
metadata:
  namespace: elastic
  name: kibana-svc
  labels:
    app: kibana 
spec:
  selector:
    app: kibana
  ports:
  - name: web
    port: 5601
